--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "author": "Antoni Kois",
   "license": "ISC",
   "dependencies": {
+    "@binance/connector": "^2.0.1",
+    "bybit-api": "^3.5.5",
     "dotenv": "^16.0.3",
-    "prettier": "^2.8.7"
+    "prettier": "^2.8.7",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
