--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,44 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+
 /node_modules
-/backups
-.idea
-dist
-yarn.lock
-yarn-error.log
-package-lock.json
-.env
-.env.secrets
+**/node_modules
+/.pnp
+.pnp.js
+redis.conf
+.turbo
+build/**
+dist/\*\*
+
+cache
+lib
+
+# local env files
+
+**/.env
+**/.env.local
+**/.env.secrets
+**/.env.development
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+
+# testing
+
+/coverage
+coverage.json
+
+# misc
+
+.DS_Store
+\*.pem
+
+# debug
+
+_.log
+npm-debug.log_
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log\*
+\*\*/package-lock.json
