--- a/packages/eslint-config-qios-next/package.json
+++ b/packages/eslint-config-qios-next/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-trading-bot-next",
+  "name": "eslint-config-qois-next",
   "version": "0.0.0",
   "main": "eslint-next.js",
   "license": "MIT",
