--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@trading-bot/tsconfig",
+  "name": "@qois/tsconfig",
   "version": "0.0.0",
   "private": true,
   "main": "index.ts",
