--- a/apps/data-feed/package.json
+++ b/apps/data-feed/package.json
@@ -21,9 +21,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^9.4.2",
+    "ccxt": "^3.1.21",
+    "dayjs": "^1.11.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
